fix: landing page design flaws, using flex from now on and relative percentage of width (fixes horizontal scrolling from the carousel)

--- a/css/header.css
+++ b/css/header.css
@@ -1,14 +1,16 @@
-body{
+body {
+    max-width: 100vw;
     margin: 0;
     padding: 0;
+
 }
 html{
     background-color: black;
     scroll-behavior: smooth;
 }
 /* Header Styles */
-header {
-    position: fixed;
+nav {
+    position: relative;
     width: 76vw;
     display: flex;
     justify-content: space-between;
@@ -175,11 +177,11 @@ header {
 
 /*change the size of the texts for phone */
 @media only screen and (max-width: 1100px) {
-    header {
+    nav {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 50px;
+        height: auto;
     }
     .nyarch-button{
         top:-20px;
