--- a/css/installation.css
+++ b/css/installation.css
@@ -13,8 +13,7 @@
 
 .installation-gallery-container {
     position: relative;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
     overflow: hidden;
     height: 60vh;
     display: flex;
