--- a/css/landing.css
+++ b/css/landing.css
@@ -3,12 +3,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh; 
+    width: 100%;
+    height: 100%;
     background-color: #00000000;    
     z-index: -1; /* Ensure it's behind other content */
     overflow: hidden;
-    overflow-y: scroll; /* Enable vertical scrolling for the background */
 }
 
 .grid-background.fixed {
@@ -51,21 +50,19 @@
 #landing {
     position: relative;
     width: 100%;
-    height: 100vh; /* Increased to 500vh to match grid background */
-    overflow: hidden; /* Hide overflow to prevent scrolling */
+    height: 100dvh;
     background: linear-gradient(to bottom, black, #00526f);
     z-index: -2;
-    top: 5vh;
+    padding-top: 6rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .landing-content {
-    top : 50vh;
-    position: absolute;
-
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%) scale(1); /* Initial scale (1) */
+    position: relative;
     z-index: 1; /* Ensure it's above the grid background */
     display: flex;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -73,11 +70,9 @@
     color: #fff;
     font-family: 'JetBrains Mono', monospace;
     text-align: center;
-    transition: transform 0.3s ease, width 0.3s ease, font-size 0.3s ease, position 0.3 ease; 
+    transition: transform 0.3s ease, width 0.3s ease, font-size 0.3s ease, position 0.3s ease;
     transform-origin: top; /* Ensure scaling starts from top */
-    padding-top: 15vh;
-    max-width: 100%; 
-    overflow: hidden;
+    max-width: 100%;
 }
 
 .landing-content img {
@@ -93,16 +88,20 @@
     -webkit-backdrop-filter: blur(8px); /* For Safari */
 }
 
-
-
-
-
 .version-text {
     font-size: 12vh; 
     color: #b83157;
     margin-top: 20px;
     opacity: 0; /* Initially hidden */
     transition: opacity 0.3s ease, margin-top 0.3s ease; /* Smooth transition for opacity and margin-top */
+}
+
+h1.text-container {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    line-height: 0.8;
 }
 
 .welcome-text {
